package usantatecla.tictactoe.views.graphics;

import usantatecla.tictactoe.controllers.PlayController;
import usantatecla.tictactoe.controllers.ResumeController;
import usantatecla.tictactoe.controllers.StartController;
import usantatecla.tictactoe.views.View;

public class GraphicsView implements View {

    public void start(StartController startController) {
    }

    public void play(PlayController playController) {
    }

    public boolean resume(ResumeController resumeController) {
        return true;
    }

}
